# prixes

./: .gitignore  404.html  ETAPE2_SETUP.md  FIREBASE-GUIDE.md  README.md  firestore.rules  index.html  manifest.json  netlify.toml  robots.txt  storage.rules  sw.js
api/: transcribe.py
prixes-platform/apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
prixes-platform/apps/api/alembic/: env.py
prixes-platform/apps/api/alembic/versions/: 20260627_0001_initial.py  20260628_0002_add_allergens.py  20260628_0003_add_diets.py  20260702_0004_shopping_and_alerts.py  20260704_0005_devices.py  20260710_0006_feedback.py  20260710_0007_analytics.py  20260719_0008_add_pricepoint_index.py
prixes-platform/apps/api/app/: main.py
prixes-platform/apps/api/app/core/: config.py  db.py  deps.py  http.py  models.py  ranking.py  rate_limit.py  redis.py  security.py
prixes-platform/apps/api/app/domains/alerts/: models.py  router.py  schemas.py  service.py
prixes-platform/apps/api/app/domains/analytics/: __init__.py  models.py  router.py
prixes-platform/apps/api/app/domains/auth/: firebase.py  google.py  router.py  schemas.py  service.py
prixes-platform/apps/api/app/worker/: main.py  tasks.py
prixes-platform/apps/api/scripts/: backfill_allergens.py  backfill_diets.py  ingest_fuel.py  scrape_prices.py  seed.py
prixes-platform/apps/api/scripts/retailers/: base.py
prixes-platform/apps/api/tests/: test_admin_access.py  test_alerts.py  test_deals_autogen.py  test_deals_validation.py  test_price_quality.py  test_security.py  test_smoke.py
qaida-app/: index.html  (+3 more)
(+192 files in other folders)
