[project]
name = "prixes-api"
version = "0.1.0"
description = "Prixes backend — FastAPI async API + ARQ worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23.0",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "geoalchemy2>=0.16",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.28",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "python-multipart>=0.0.12",
    "boto3>=1.35",
    "authlib>=1.3",
    "sentry-sdk[fastapi]>=2.18",
    "orjson>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Historical migrations are frozen once applied — don't reformat/relint them.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "C4", "SIM"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# boto3/botocore ship no type stubs; installing boto3-stubs is unnecessary
# overhead for the couple of calls this project makes.
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
